375: Fixing issue on adding reviews on mobile devices

--- a/themes/profumo-labo/_dev/css/theme/layout/_header.scss
+++ b/themes/profumo-labo/_dev/css/theme/layout/_header.scss
@@ -2118,3 +2118,70 @@
 .header__inner.header__nav--sticky-active {
   padding: 0 !important;
 }
+
+.l-header.less-z-index{
+  z-index: 1000;
+}
+
+.sticky-menu-correction.more-z-index{
+  z-index: 1010;
+}
+
+.header__inner.product-comment__form--overlay-header:before,
+.header__nav.product-comment__form--overlay-header:before{
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  z-index: 1000;
+}
+
+.header__nav.product-comment__form--overlay-header:before{
+  display: none !important;
+
+  @media(max-width: 991px){
+      content: '';
+      display: block !important;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.7);
+      z-index: 1000;
+  }
+}
+
+.header__inner.product-comment__form--overlay-header.header__nav--sticky-active:before{
+  display: none !important;
+}
+
+.header__nav.product-comment__form--overlay-header.header__nav--sticky:before{
+  content: '';
+  display: block !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  z-index: 1000;
+}
+
+.l-header.less-z-index .header__inner.product-comment__form--overlay-header:before,
+.l-header.less-z-index .header__nav.product-comment__form--overlay-header:before{
+  display: none !important;
+}
